<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_out"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#696969"
            android:text="@string/tocheck_title" />

        <LinearLayout
            android:layout_height="100dp"
            android:layout_width="360dp"
            android:background="@drawable/border_gray"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                app:srcCompat="@mipmap/computer" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textColor="#000000"
                android:text="@string/tocheck_origin1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#696969"
            android:text="@string/tocheck_issue" />

        <TextView
            android:id="@+id/textView29"
            android:layout_height="wrap_content"
            android:layout_width="360dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="#000000"
            android:background="@drawable/border_gray"
            android:text="@string/tocheck_issue1" />
        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#696969"
            android:text="@string/tocheck_photo" />

        <TextView
            android:id="@+id/textView35"
            android:layout_height="wrap_content"
            android:layout_width="360dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="#000000"
            android:background="@drawable/border_gray"
            android:text="@string/tocheck_aicheck" />
        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#696969"
            android:text="@string/tocheck_result" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_tocheck_result"
                android:gravity="center_horizontal"
                android:text="@string/tocheck_yes" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text="@string/space" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_tocheck_result2"
                android:gravity="center_horizontal"
                android:text="@string/tocheck_no" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>