<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".key">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:background="#f8f8f8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/key_onstain" />
        <TextView
            android:id="@+id/textView55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space" />
        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/key_time" />
        <TextView
            android:id="@+id/textView52"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space" />
        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/key_pubkey" />
        <TextView
            android:id="@+id/textView53"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space" />
        <TextView
            android:id="@+id/textView50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/key_prikey" />
        <TextView
            android:id="@+id/textView54"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space" />
        <TextView
            android:id="@+id/textView51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/key_warning" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/key_confirm" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>