<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_out"
            android:textColor="#4b0082"
            android:padding="10dp"
            android:textSize="25sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_out"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order1"
                        android:textColor="#000000"
                        android:padding="10dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView63"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/order_renting"
                        android:textColor="#ff4500"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/border"
                        android:contentDescription="@string/image"
                        android:src="@mipmap/basketball" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:text="@string/renttitle1"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/timesurplus"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/pubkey"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_return"
                    android:textColor="#000000"
                    android:background="@drawable/border_gray"
                    android:textSize="20sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@drawable/border_out"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:contentDescription="@string/image"
                android:src="@mipmap/bike"
                app:srcCompat="@mipmap/bike" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:text="@string/order2"
                        android:textColor="#000000"
                        android:layout_weight="1"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView64"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/order_rentover"
                        android:textSize="15sp"
                        android:textColor="#2e8b57"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:layout_gravity="end"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/renttitle3"
                    android:textColor="#000000"
                    android:padding="5dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/timesurplus2"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/pubkey2"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>