<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_gravity="left|top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="50%">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:text="@string/picsim_success" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_below="@id/text1"
            android:text="@string/picsim_subtract" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_below="@id/text2"
            android:text="@string/picsim_tb" />

    </RelativeLayout>



    <Button
        android:id="@+id/next"
        android:layout_gravity="center"
        android:text="@string/picsim_next"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_heightPercent="8%"
        app:layout_widthPercent="60%" />

</androidx.percentlayout.widget.PercentFrameLayout>