<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".publish">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/publish_cancle"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView76"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/space"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="下一步"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_photo"
            android:textColor="#000000"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/black"
            android:src="@drawable/ic_photo_camera"
            android:layout_centerInParent="true"/>

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>